added in the styling with tailwind and make the home page look pretty good

--- a/package.json
+++ b/package.json
@@ -6,9 +6,15 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "develop": "concurrently \"npm run dev --prefix server\" \"npm run dev --prefix client\""
-
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@splidejs/react-splide": "^0.7.12",
+    "@splidejs/splide": "^4.1.4"
+  },
+  "devDependencies": {
+    "daisyui": "^4.4.20"
+  }
 }
